--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity_cycleObserver"></activity>
+        <activity android:name=".activity_cycleObserver" />
         <activity android:name=".activity_cycle" />
         <activity android:name=".activity_login" />
         <activity android:name=".activity_home" />
