--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity_cycleObserver" />
-        <activity android:name=".activity_cycle" />
-        <activity android:name=".activity_login" />
-        <activity android:name=".activity_home" />
+        <activity android:name=".ObserverCycle" />
+        <activity android:name=".CycleActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
