--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".StorageActivity"></activity>
         <activity android:name=".ObserverCycle" />
         <activity android:name=".CycleActivity" />
         <activity android:name=".LoginActivity" />
