--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PermissionActivity"></activity>
+        <activity android:name=".InformationsActivity"></activity>
+        <activity android:name=".PermissionActivity" />
         <activity android:name=".StorageActivity" />
         <activity android:name=".ObserverCycle" />
         <activity android:name=".CycleActivity" />
