--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <supports-screens
+        android:largeScreens="true"
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:xlargeScreens="true"
+        android:resizeable="true" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -35,7 +42,6 @@
         </provider>
         <activity android:name=".WebActivity" android:screenOrientation="portrait"/>
         <activity android:name=".InformationsActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".NoteActivity" android:screenOrientation="portrait"/>
         <activity android:name=".StorageActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ObserverCycle" android:screenOrientation="portrait"/>
         <activity android:name=".CycleActivity" android:screenOrientation="portrait"/>
